--- a/templates/form.html
+++ b/templates/form.html
@@ -17,7 +17,7 @@
                   <select name="time" id="time"> 
                       <option value="12">12h</option>
                       <option value="24">24h</option>
-                      <option value="168">1 week</option>
+                      <option value="48">48h</option>
                   </select>
               </div>
             <div class="form-group col-6">
