predict highest need for a small sample of stations

--- a/templates/result.html
+++ b/templates/result.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container">
-    <h1>Prediction for the next 36h on station {{ name }}</h1>
+    <h1>Prediction for the next {{time}} hours on station {{ name }}</h1>
 </div>
 
 <div class="container"></div>
